# soar_rosbot_ros

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
launch/: launch_rosbot_autonomy.py  soar_maze.launch.py
models/maze/: model.config  model.sdf
models/maze/materials/scripts/: maze.material
models/maze/meshes/: maze.stl
soar_rosbot_controller/: CMakeLists.txt  README.md  package.xml
soar_rosbot_controller/docs/: aruco_approach_implementation.md
soar_rosbot_controller/include/soar_rosbot_controller/: command_publisher.hpp  motion_controller.hpp  perception_subscribers.hpp  soar_maze_controller.hpp  yaw_observer.hpp
soar_rosbot_controller/launch/: controller.launch.py
soar_rosbot_controller/soar_rules/: front_wall_turn.soar  main.soar  maze_solver.soar  target_distance_approach.soar
soar_rosbot_controller/src/: main.cpp  motion_controller.cpp  motion_controller_main.cpp  soar_maze_controller.cpp
soar_rosbot_gazebo/: setup.py
soar_rosbot_gazebo/config/: rosbot.rviz
soar_rosbot_gazebo/launch/: soar_maze.launch.py
soar_rosbot_msgs/: CMakeLists.txt  package.xml
soar_rosbot_msgs/msg/: ArucoDetection.msg  WallDetection.msg
soar_rosbot_perception/: package.xml  setup.py
soar_rosbot_perception/launch/: perception.launch.py
soar_rosbot_perception/soar_rosbot_perception/: aruco_detector.py  wall_detector.py
soar_rosbot_ros/: soar_rosbot_ros.py
worlds/: maze_world.sdf
