<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soar_rosbot_ros</name>
  <version>0.0.1</version>
  <description>SOAR integration with ROSbot XL</description>
  <maintainer email="alvgaona@gmail.com">alvaro</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>rosbot_gazebo</exec_depend>
  <exec_depend>rosbot_description</exec_depend>
  <exec_depend>rosbot_controller</exec_depend>
  <exec_depend>rosbot_localization</exec_depend>
  <exec_depend>rosbot_utils</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
